# synapsis-py

./: .env.template  .gitignore  CHANGELOG.md  Makefile  NOTICE  Pipfile  README.md  pyproject.toml  pytest.ini  tox.ini
docs/: index.html
docs/core/: cli.html  exceptions.html  hooks.html  index.html  lazy_readonly_property.html  narg.html  synapsis.html  synapsis_utils.html  utils.html
docs/synapse/: index.html  synapse.html  synapse_concrete_type.html  synapse_permission.html  synapse_utils.html
src/synapsis/: __init__.py
src/synapsis/core/: __init__.py  cli.py  exceptions.py  hooks.py  lazy_readonly_property.py  narg.py  synapsis.py  synapsis_utils.py  utils.py
src/synapsis/synapse/: __init__.py  synapse.py  synapse_concrete_type.py  synapse_permission.py  synapse_utils.py  synapse_utils.pyi
tests/: conftest.py
tests/synapsis/core/: test_cli.py  test_hooks.py  test_lazy_readonly_attribute.py  test_narg.py  test_synapsis.py  test_synapsis_utils.py  test_utils.py
tests/synapsis/synapse/: test_synapse.py  test_synapse_concrete_type.py  test_synapse_permission.py  test_synapse_utils.py
