[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synapsis"
version = "0.0.1"
description = "Synapse integration utilities with asyncio support."
keywords = ["Synapse", "asyncio"]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "synapseclient>=2.3.1,<3.0.0",
    "dotchain"
]

[project.urls]
"repository" = "https://github.com/ki-tools/synapsis-py"

[tool.hatch.build]
only-packages = true
sources = ["src"]
artifacts = [
    "CHANGELOG.md"
]
exclude = [
    "tests"
]
